<resources>
  <string name="app_name">HeatControl</string>
  <string name="title_home">Home</string>
  <string name="title_settings">Settings</string>
  <string name="ambient_temp">Ambient temp (℃)</string>
  <string name="target_temp">Target temp (℃)</string>
  <string name="refresh">Refresh</string>
  <string name="submit">Submit</string>
  <string name="error">Error</string>
  <string name="api_key_label">Api Key</string>
  <string name="reset">Reset</string>
  <string name="save">Save</string>
  <string name="host_name">Host name</string>
  <string name="host_value">ip:port</string>
  <string name="delete">delete</string>
  <string name="add_host">add host</string>
</resources>
